<resources>
    <string name="app_name">StoryApp Sub2</string>
    <string name="title_app">Story App Dicoding 2</string>
    <string name="logo_app">logo app</string>
    <string name="title_signup_page">complete your data below</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="copyright">© 2021 Dicoding</string>
    <string name="title_welcome_page">Welcome to the Story App</string>
    <string name="message_welcome_page">The Story App application is an application for sharing stories of life experiences in the world</string>
    <string name="login">Login</string>
    <string name="error_name">Enter Name</string>
    <string name="error_email">Enter Email</string>
    <string name="error_password">Password length must than 6 digits</string>
    <string name="title_login_page">Prepare yourself to see your friends experience</string>
    <string name="message_login_page">first enter your data</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">upload</string>
    <string name="description_enter">Enter your description heree....</string>
    <string name="add_stories">add_stories</string>
    <string name="description_error">Description don\'t empty</string>
    <string name="file_error">Image don\'t empty</string>
    <string name="failed_upload">Failed to Upload Images</string>
    <string name="setting">setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout_message">Click here to exit the application</string>
    <string name="logout">Logout</string>
    <string name="error_login">Login Failed</string>
    <string name="error_offline">You\'re Offline</string>
    <string name="error_signup">SignUp Failed</string>
    <string name="error_get_stories">Error fetched Stories</string>
    <string name="error_timeout">Timeout</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">maps</string>
    <string name="error_maps">get Data Maps Failed</string>
    <string name="title_activity_maps_add_position">MapsAddPosition</string>
    <string name="image_preview">image_preview</string>
    <string name="add_position">ADD Position</string>
    <string name="preview_image">preview_image</string>
    <string name="image_photo_user">image photo user</string>
    <string name="languages">Languages</string>
    <string name="change_languages">click here to change language</string>
    <string name="errror_get_location">Can\'t get Location</string>
    <string name="success_add_location">Succes add Position</string>
    <string name="errror_file_not_found">File not available</string>
    <string name="error_get_permission">Not getting permission</string>
    <string name="image_preview_cds">image preview</string>
</resources>